Modify HTML to add images

--- a/cheese-lasagna.html
+++ b/cheese-lasagna.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Cheese-Lasagna Recipes</h1>
     <p> This lasagna recipe is an easy vegetarian lasagna with ricotta, mozzarella, and Parmesan cheese. </p>
-    <img src="../Cheese-Lasagna.jpg" alt="Tasty-lasagna-cheese" width="400">
+    <img src="./Cheese-Lasagna.jpg" alt="Tasty-lasagna-cheese" width="400">
 
     <h2> Ingredients </h2>
     <ul>
