--- a/lasagna-stuffed-shell.html
+++ b/lasagna-stuffed-shell.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lasagna-Stuffed-Shell Recipe </h1>
     <p> Jumbo pasta shells are stuffed with a lasagna-inspired blend of ricotta, mozzarella, spinach, and ground beef in this family-friendly recipe. </p>
-    <img src="../stuffed-shell-lasagna.jpg" alt="lasagna-stuffed-shells" width="500" height="400">
+    <img src="./stuffed-shell-lasagna.jpg" alt="lasagna-stuffed-shells" width="500" height="400">
 
     <h2> Ingredients </h2>
     <ul>
