--- a/simple-meat-lasagna.html
+++ b/simple-meat-lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Simple-Meat-Lasagna Recipes</h1>
     <p> This lasagna with ground beef and whole wheat noodles is an easy and tasty dish. </p>
-    <img src="../meat-lasagna.jpg" alt="tasty-meat-lasagna" width="500" height="400">
+    <img src="./meat-lasagna.jpg" alt="tasty-meat-lasagna" width="500" height="400">
 
     <h2> <em>Ingredients</em> </h2>
     <ul>
