--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Odin's Recipes</h1>
-    <img src="../chef dishes-shutterstock.jpg" alt="Chef">
+    <img src="./chef-dishes.jpg" alt="Chef">
     <p>A recipe for your favorite lasagna dishes</p>
 
     <h2> Lasagna Dishes On Odin's Recipe </h2>
